# overlayward

./: Cargo.toml  Makefile  README.md
crates/ow-cli/: Cargo.toml
crates/ow-cli/src/: client.rs  commands.rs  lib.rs  output.rs
crates/ow-core/: Cargo.toml
crates/ow-core/src/: auth.rs  lib.rs  registry.rs
crates/ow-core/src/mock/: backend.rs  guardian.rs  mod.rs  store.rs
crates/ow-core/src/traits/: approval.rs  audit.rs  event.rs  exec.rs  file.rs  guardian.rs  inter.rs  mod.rs  network.rs  resource.rs  sandbox.rs  snapshot.rs  volume.rs
crates/ow-ffi/: Cargo.toml  build.rs  cbindgen.toml
crates/ow-ffi/src/: lib.rs
crates/ow-grpc/: Cargo.toml  build.rs
crates/ow-grpc/src/: lib.rs  services.rs
crates/ow-macros/: Cargo.toml
crates/ow-macros/src/: lib.rs
crates/ow-mcp/: Cargo.toml
crates/ow-mcp/src/: lib.rs  tools.rs
crates/ow-rest/: Cargo.toml
crates/ow-rest/src/: error.rs  extract.rs  lib.rs
crates/ow-rest/src/middleware/: auth.rs  mod.rs
crates/ow-rest/src/routes/: approval.rs  audit.rs  events.rs  exec.rs  file.rs  inter.rs  mod.rs  network.rs  resource.rs  sandbox.rs  snapshot.rs  volume.rs
crates/ow-sandbox/: Cargo.toml
crates/ow-sdk/: Cargo.toml
crates/ow-sdk/src/: client.rs  error.rs  lib.rs
crates/ow-types/: Cargo.toml
crates/ow-types/src/: auth.rs  error.rs  lib.rs  response.rs
crates/ow-types/src/models/: approval.rs  audit.rs  event.rs  exec.rs  file.rs  inter.rs  mod.rs  network.rs  resource.rs  sandbox.rs  snapshot.rs  volume.rs
proto/overlayward/v1/: approval.proto  audit.proto  common.proto  event.proto  exec.proto  file.proto  inter.proto  network.proto  resource.proto  sandbox.proto  snapshot.proto  volume.proto
sdk/c/: overlayward.h
sdk/cpp/: README.md
sdk/go/: doc.go
sdk/python/: __init__.py
src/: main.rs
