[package]
name = "ow-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ow-types = { workspace = true }
serde = { workspace = true }
sonic-rs = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
jiff = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
bytes = { workspace = true }
papaya = { workspace = true }
parking_lot = { workspace = true }
phf = { workspace = true }
