[package]
name = "ow-grpc"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ow-types = { workspace = true }
ow-core = { path = "../ow-core" }
tonic = { workspace = true }
prost = { workspace = true }
tokio = { workspace = true }
tokio-stream = "0.1"
tracing = { workspace = true }
sonic-rs = { workspace = true }
bytes = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
