[package]
name = "ow-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ow-types = { workspace = true }
ow-core = { path = "../ow-core" }
rmcp = { version = "1.1", features = ["server", "transport-io", "transport-streamable-http-server"] }
tokio = { workspace = true }
serde = { workspace = true }
sonic-rs = { workspace = true }
serde_json = "1"
tracing = { workspace = true }
axum = { workspace = true }
