[package]
name = "ow-rest"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ow-types = { workspace = true }
ow-core = { path = "../ow-core" }
serde = { workspace = true }
sonic-rs = { workspace = true }
tokio = { workspace = true }
axum = { version = "0.8", features = ["ws", "multipart"] }
async-trait = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
bytes = { workspace = true }
